# lawandorga-backend-service

./: .coverage  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Pipfile  Procfile  README.md  SECURITY.md  TODO.md  apache.conf  apache.prod.conf  apache.test.conf  coverage.xml  deploy.sh  docker-compose-db.yml  docker-compose.yml  fast-deploy.sh  init-letsencrypt.sh  local_manage.py  localprod_manage.py  logconfig.json  manage.py  notes.md  package-lock.json  package.json  permissions.sh  postgres_manage.py  precommit.sh  production_manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  run.sh  runserver.py  s3backup.md  setup.cfg  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  neues-l-o-feature-🚀🆕.md  project.md  task.md  user-story.md
.github/workflows/: acceptance-stage--query-quality-gate-status.yml  acceptance-stage--sonarcloud-analyze-code.yml  acceptance-stage--test-docker-image.yml  acceptance-stage.yml  analyze.yml  backup_files.yml  commit-stage--build-artifact.yml  commit-stage--build-image.yml  commit-stage--precommit-analyze.yml  commit-stage--run-tests.yml  commit-stage--sonarcloud-analyze-code.yml  commit-stage.yml  cronjobs.yml  deploy.yml  deploy_main.yml  deploy_test.yml  deployment-stage--migrate-data.yml  deployment-stage--run-migrations.yml  deployment-stage--terraform-apply.yml  deployment-stage.yml  docker-image.yml  old--analyze.yml  old--deploy.yml  other--backup-files.yml  other--cronjobs.yml  other-analyze.yml  other-cronjobs.yml  other-deploy.yml  pipeline.yml  pipeline_[test].yml
apps/api/: admin.py  apps.py  authentication.py  errors.py  fixtures.py  forms.py  permissions.py  static.py  urls.py
apps/collab/: admin.py  apps.py  fixtures.py  static.py  urls.py
apps/core/: admin.py  apps.py  errors.py  fixtures.py  forms.py  models.py  static.py  tests.py  urls.py  use_cases.py  views.py
apps/files/: admin.py  apps.py  fixtures.py  static.py  urls.py
apps/internal/: admin.py  apps.py  models.py  serializers.py  urls.py  viewsets.py
apps/recordmanagement/: admin.py  apps.py  fixtures.py  helpers.py  urls.py
apps/seedwork/: api_layer.py  storage.py  test_helpers.py  use_case_layer.py
apps/static/: __init__.py  api_layer.py  emails.py  encrypted_storage.py  encryption.py  error_codes.py  logger.py  middleware.py  notification_enums.py  permission.py  permissions.py  service_layer.py  storage.py  (+3 more)
backend/: __init__.py  settings.py  tests.py  urls.py  wsgi.py
config/: api.py  authentication.py  handlers.py  middleware.py  session.py  storage.py  test.py  urls.py  workers.py  wsgi.py
core/: __init__.py  admin.py  apps.py  command.py  cronjobs.py  fixtures.py  handlers.py  injections.py  models.py  static.py  types.py  urls.py  use_cases.py  usecases.py  views.py
infrastructure/: .terraform.lock.hcl  i000-versions.tf  i100-vars.tf  i110-providers.tf  i300-vars.tf  i305-secret.tf  i310-deployment.tf  i320-service.tf  i330-certificate.tf  i331-certificate.yml  i340-httproute.tf  i340-ingress.tf  i341-cors-policy.tf  i350-cors.tf  i350-cronjob-reminders.tf  i351-cors.yml
messagebus/: __init__.py  admin.py  apps.py  models.py  utils.py
nginx/: nginx.conf
prometheus/: prometheus.yml
seedwork/: functional.py  injector.py  repository.py  types.py
static/: README.md  index.html
templates/: 400.html  401.html  404.html  500.html  README.md  api_debug.html  index.html
(+2469 files in other folders)
