[tool.black]

line-length = 88

[tool.mypy]

plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
exclude = ["migrations", "__pypackages__", "venv"]

[tool.django-stubs]

django_settings_module = "config.settings.local"
ignore_missing_settings = true

[tool.isort]

known_local_folder = ["dms", "seedwork"]
profile = "black"

[tool.ruff]

line-length = 320
exclude = [
    "__init__.py",
    "config/settings/local.py",
    "config/settings/local_postgres.py",
    "config/settings/local_production.py",
    "config/settings/production.py",
    "config/settings/testing.py",
    "core/forms.py",
    "core/views.py",
    "core/models.py",
    "core/tests.py",
    "core/admin.py"
]

[tool.pytest.ini_options]

DJANGO_SETTINGS_MODULE = "config.settings.testing"
addopts = "--ignore=__pypackages__"
markers = [
    "db: marks tests as hitting the database (deselect with '-m \"not db\"')"
]
env = [ "TESTING = true" ]

[project]

name = "lawandorga-backend-service"
version = "0.0.0"
description = "Law&Orga Backend Service"
requires-python = "==3.14.*"
readme = "README.md"
license = { text = "GNU Affero General Public License v3.0" }
dependencies = [
    "gunicorn==25.0.3",
    "djangorestframework==3.16.*",
    "psycopg2==2.9.*",
    "django-cors-headers==4.9.*",
    "django-debug-toolbar==6.*",
    "cryptography==46.0.*",
    "django-solo==2.5.*",
    "django-storages==1.14.*",
    "whitenoise==6.9.*",
    "django-tinymce==4.1.*",
    "pycryptodome==3.22.*",
    "boto3==1.37.*",
    "coverage==7.13.*",
    "pytest==8.3.*",
    "pytest-django==4.11.*",
    "mypy==1.15.*",
    "djangorestframework-stubs==3.15.*",
    "black==26.*",
    "environs==14.5.*",
    "pytz==2025.*",
    "pytest-env==1.1.*",
    "ics==0.7.*",
    "django[argon2]==5.2.*",
    "pydantic[email]==2.12.*",
    "dnspython==2.7.*",
    "bleach==6.2.*",
    "types-bleach==6.2.*",
    "pytest-xdist==3.8.*",
    "django-oidc-provider @ git+https://github.com/lawandorga/django-oidc-provider",
    "pyotp==2.9.*",
    "ruff==0.14.*",
    "isort==6.*",
    "django-stubs==5.2.*",
    "pillow",
    "weasyprint",
    "tach",
    "types-pytz",
    "qrcode[pil]==8.*"
]
